# django-app

./: README.md  pyproject.toml
src/app/: settings.py
src/polls/: admin.py  models.py  tests.py  views.py
src/polls/migrations/: 0001_initial.py
src/polls/templates/admin/: base_site.html
