[tool.poetry]
name = "django-webapp"
version = "0.1.0"
description = ""
authors = ["Casper Damen <casper.a.damen@gmail.com>"]
readme = "README.md"
packages = [{include = "django_webapp"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
black = "^23.7.0"
psycopg2-binary = "^2.9.7"
django-debug-toolbar = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
